# pricing-parser

./: .gitignore  AGENTS.md  CLAUDE.md  Git与Bundle开发协作规范_实习生版.md  MIGRATION_PLAN.md  README.md  pricing_parser.bundle  pricing_parser.code-workspace  pricing_parser_v2.bundle  pricing_parser_v3.bundle  pyproject.toml  产品与托管机构映射表.csv  单项目 Commit Convention（轻量版）.md
.github/: copilot-instructions.md
config/: asset_taxonomy.yaml  code_rules.yaml
data_samples/: README.md
docs/: HANDOFF.md  documentation_governance_report.json  documentation_governance_report.md  status.md
output/: parse_summary.md  review_items.csv  routing_results.csv  valuation_positions.csv  valuation_subjects.csv  估值表解析_output_2025-03-27.xlsx
output_phase1/: parse_summary.md  routing_results.csv  valuation_positions.csv  valuation_subjects.csv
tasks/: 2026-04-27_evidence_chain_closure_execution_report.md  2026-04-27_evidence_chain_closure_need_review.md  2026-04-27_evidence_chain_closure_task_package.md  2026-06-04_repo_ai_entrypoints_minimal_bootstrap_execution_report.md  2026-06-04_repo_ai_entrypoints_minimal_bootstrap_task_package.md  2026-06-04_repo_ai_initialization_scan.md  2026-06-11_claude_doc_governance_execution_report.md  2026-06-12_claude_doc_governance_execution_report_fix_P1.md  README.md  intern_project_takeover_20260609.md  round4_acceptance_baseline_refresh_report.md  round4_asset_taxonomy_execution_report.md  round4_asset_taxonomy_final_review.md  round4_asset_taxonomy_pre_implementation_review.md  round4_asset_taxonomy_task_package.md  (+4 more)
tests/: test_acceptance_baseline.py  (+10 more)
(+91 files in other folders)
