[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valuation-parser"
version = "0.1.0"
description = "Valuation statement parser scaffold with mapping-driven routing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1.5",
  "xlrd>=2.0.1",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
valuation-parser = "valuation_parser.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
